# ClassificationAtTopExperiments.jl

./: .gitignore  LICENCE  Manifest.toml  Project.toml  README.md  intro.jl
scripts/: generate_configs.jl  preprocess.jl  run_all.jl  run_model.jl  run_model_MPI.jl  test_srnet.jl
scripts/dissertation/: configs.jl  datasets.jl  evaluation.jl  run.jl
scripts/steganography/: configs.jl  evaluation.jl  plots.jl  run.jl
scripts/steganography_new/: configs.jl  evaluation.jl  gradient_convergence.jl  run.jl
scripts_python/: README.md  prepare.sh  prepare_srnet_weights.py  pyproject.toml
src/: slurm.jl
src/Evaluation/: Manifest.toml  Project.toml
src/Evaluation/src/: Evaluation.jl  latexutils.jl  utilities.jl
src/Experiments/: Manifest.toml  Project.toml
src/Experiments/src/: Experiments.jl  batchloader.jl  configs.jl  convergence.jl  datasets.jl  evaluation.jl  filedataset.jl  latexutils.jl  loaders.jl  logging.jl  losses.jl  models.jl  objectives.jl  optimisers.jl  srnet.jl  train.jl
src/Experiments/src/datasets/: JMiPOD.jl  Nsf5.jl
