[project]
name = "srnet-tools"
version = "0.1.0"
description = "Python utilities for SRNet steganalysis experiments"
authors = [
    { name = "Václav Mácha", email = "vaclav.macha92@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "h5py>=3.0",
    "numpy>=1.24",
    "imageio>=2.31",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
